# gpu-llm-infra-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: ci_smoke.yaml  default.yaml  tinyshakespeare.yaml
data/: sample_corpus.txt
deploy/triton/model_repository/tiny_gpt_onnx/: config.pbtxt
deploy/triton/model_repository/tiny_gpt_trt/: config.pbtxt
src/gpu_llm_infra_lab/: __init__.py  bench_collectives.py  bench_gpu.py  char_tokenizer.py  ckpt_utils.py  data_loader.py  export_onnx.py  fetch_data.py  infer_ort.py  infer_quant.py  plot_training.py  render_triton_layout.py  scheduler_sim.py  tiny_gpt.py  train.py  train_fsdp.py
